--- a/templates/index.html
+++ b/templates/index.html
@@ -32,10 +32,10 @@
   <h2 class="text-3xl font-bold italic text-green-700">
   Check your device's status
   </h2>
-   </a>
+  </a>
 
 <!-- Box 2 -->
-  <a href="/condition" 
+  <a href="/condition" target="_blank" 
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
   <h2 class="text-3xl font-bold italic text-green-700">
    Plant condition overview
@@ -43,27 +43,31 @@
   </a>
 
    <!-- Box 3 -->
-   <a href="{{ url_for('show_plants') }}"
-   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-   <h2 class="text-3xl font-bold italic text-green-700">
-   Find suitable plants for your environment</h2>
-   </a>
+  <a href="{{ url_for('show_plants') }}" target="_blank"
+  class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
+  <h2 class="text-3xl font-bold italic text-green-700">
+  Find suitable plants for your environment</h2>
+  </a>
 
 
   <!-- Footer -->
-  <footer class="bg-white shadow-inner py-12 px-6 text-center">
-    <h3 class="text-2xl font-bold text-green-700 mb-6">Contact Us</h3>
+  <!-- Footer -->
+ <footer class="bg-green-50 py-12 px-6 text-center">
+  <h3 class="text-3xl font-bold text-green-700 mb-6">Contact Us</h3>
 
-    <p class="text-gray-700 mb-2">
+  <div class="space-y-2">
+    <p class="text-lg text-gray-700">
       Email: <a href="mailto:greenglow@gmail.com" class="text-green-600 hover:underline">
         greenglow@gmail.com
       </a>
     </p>
 
-    <p class="text-gray-700">
+    <p class="text-lg text-gray-700">
       Phone: 0558165619
     </p>
-  </footer>
+  </div>
+ </footer>
+
 
 </body>
 </html>
