--- a/templates/index.html
+++ b/templates/index.html
@@ -49,9 +49,7 @@
   Find suitable plants for your environment</h2>
   </a>
 
-
-  <!-- Footer -->
-  <!-- Footer -->
+  </section>
  <!-- Footer -->
 <footer class="bg-white w-full py-8 px-6 text-center mt-20">
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
