--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,9 @@
   <header class="text-center py-8">
     <h1 class="text-4xl font-bold text-green-700 mb-6">Welcome to Ghiras</h1>
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo" 
-         class="mx-auto w-48 h-48 rounded-full shadow-md mb-10" />
+         class="mx-auto w-48 mb-10" />
   </header>
+  
 
 
   <!-- Boxes -->
