--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   <a href="http://127.0.0.1:5000" target="_blank"
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
   <h2 class="text-3xl font-bold italic text-green-700">
-  Check your device's status
+    Device Status Monitor
   </h2>
   </a>
 
@@ -36,7 +36,7 @@
   <a href="/condition" target="_blank" 
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
   <h2 class="text-3xl font-bold italic text-green-700">
-   Plant condition overview
+    Plant Health Overview
   </h2>
   </a>
 
@@ -44,7 +44,7 @@
   <a href="{{ url_for('show_plants') }}" target="_blank"
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
   <h2 class="text-3xl font-bold italic text-green-700">
-  Find suitable plants for your environment</h2>
+  Plant Recommendations</h2>
   </a>
 
   </section>
@@ -53,7 +53,7 @@
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
   <div class="space-y-2">
     <p class="text-lg text-gray-700">
-      Email: <a href="mailto:greenglow@gmail.com" class="text-green-600 hover:underline">
+      Email: <a href="mailto:ghiras@gmail.com" class="text-green-600 hover:underline">
         ghiras@gmail.com
       </a>
     </p>
