--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <!-- Box 1 -->
   <a href="http://127.0.0.1:5000" target="_blank"
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold italic text-green-700">
+  <h2 class="text-3xl font-bold text-green-700">
     Device Status Monitor
   </h2>
   </a>
@@ -35,7 +35,7 @@
 <!-- Box 2 -->
   <a href="/condition" target="_blank" 
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold italic text-green-700">
+  <h2 class="text-3xl font-bold text-green-700">
     Plant Health Overview
   </h2>
   </a>
@@ -43,7 +43,7 @@
    <!-- Box 3 -->
   <a href="{{ url_for('show_plants') }}" target="_blank"
   class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold italic text-green-700">
+  <h2 class="text-3xl font-bold text-green-700">
   Plant Recommendations</h2>
   </a>
 
