--- a/templates/index.html
+++ b/templates/index.html
@@ -25,12 +25,13 @@
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 px-6 max-w-6xl mx-auto mb-8">
 
     <!-- Box 1 -->
-  <a href="http://127.0.0.1:5000" target="_blank"
-  class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold text-green-700">
-    Device Status Monitor
-  </h2>
-  </a>
+    <a href="http://127.0.0.1:5000" target="_blank"
+    class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
+    <div class="flex flex-col justify-center items-center text-green-700 font-bold text-2xl leading-snug text-center">
+      Device Status Monitor
+    </div>
+    </a>
+  
 
 <!-- Box 2 -->
   <a href="/condition" target="_blank" 
