--- a/templates/index.html
+++ b/templates/index.html
@@ -18,37 +18,36 @@
          class="mx-auto w-96 mb-2" />
   </header>
   
-  
-
 
   <!-- Boxes -->
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 px-6 max-w-6xl mx-auto mb-8">
 
     <!-- Box 1 -->
     <a href="http://127.0.0.1:5000" target="_blank"
-    class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-    <div class="flex flex-col justify-center items-center text-green-700 font-bold text-2xl leading-snug text-center">
-      Device Status Monitor
-    </div>
+       class="bg-white shadow-lg rounded-3xl p-10 h-44 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
+      <div class="flex flex-col justify-center items-center text-green-700 font-bold text-3xl leading-snug text-center">
+        Device Status Monitor
+      </div>
     </a>
   
-
-<!-- Box 2 -->
-  <a href="/condition" target="_blank" 
-  class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold text-green-700">
-    Plant Health Overview
-  </h2>
-  </a>
-
-   <!-- Box 3 -->
-  <a href="{{ url_for('show_plants') }}" target="_blank"
-  class="bg-white shadow-lg rounded-3xl p-8 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
-  <h2 class="text-3xl font-bold text-green-700">
-  Plant Recommendations</h2>
-  </a>
-
+    <!-- Box 2 -->
+    <a href="/condition" target="_blank"
+       class="bg-white shadow-lg rounded-3xl p-10 h-44 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
+      <div class="flex flex-col justify-center items-center text-green-700 font-bold text-3xl leading-snug text-center">
+        Plant Health Overview
+      </div>
+    </a>
+  
+    <!-- Box 3 -->
+    <a href="{{ url_for('show_plants') }}" target="_blank"
+       class="bg-white shadow-lg rounded-3xl p-10 h-44 flex items-center justify-center text-center hover:bg-green-100 transition duration-300 ease-in-out">
+      <div class="flex flex-col justify-center items-center text-green-700 font-bold text-3xl leading-snug text-center">
+        Plant Recommendations
+      </div>
+    </a>
+  
   </section>
+  
  <!-- Footer -->
 <footer class="bg-white w-full py-8 px-6 text-center mt-20">
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
