--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,9 @@
 <body class="bg-green-50 text-gray-800">
 
   <header class="text-center py-0.07">
-    <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo" 
-         class="mx-auto w-97 mb-0.07" />
+    <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo"
+    class="mx-auto w-[500px] mb-0.07" />
+
   </header>
   
 
