--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
   </head>  
 <body class="bg-green-50 text-gray-800">
 
-  <header class="text-center py-0">
+  <header class="py-0 leading-none">
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo"
          class="mx-auto w-[500px] mb-0" />
   </header>
