--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
       }
     </style>
   </head>  
-<body class="bg-green-50 text-gray-800">
+<body class="bg-green-50 text-gray-800 flex flex-col items-center">
+
 
   <header class="py-0 leading-none">
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo"
