--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
   <header class="text-center py-0">
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo"
-    class="mx-auto w-96 mb-1" />
+    class="mx-auto w-[400px] mb-1" />
   </header>
 
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 px-6 max-w-6xl mx-auto mb-8">
