--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
   <header class="text-center py-0">
     <img src="{{ url_for('static', filename='logo.png') }}" alt="Project Logo"
-    class="mx-auto w-[470px] mb-1" />
+    class="mx-auto w-[470px] mb-2" />
   </header>
 
   <section class="grid grid-cols-1 md:grid-cols-3 gap-8 px-6 max-w-6xl mx-auto mb-8">
@@ -47,7 +47,7 @@
   </section>
   
  <!-- Footer -->
-<footer class="bg-white w-full py-8 px-6 text-center mt-20">
+ <footer class="bg-white w-full py-8 px-6 text-center mt-20">
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
   <div class="space-y-2">
     <p class="text-lg text-gray-700">
@@ -56,7 +56,7 @@
       </a>
     </p>
     <p class="text-lg text-gray-700">
-      Phone: 0558165619
+      Phone: <span class="text-green-600">0558165619</span>
     </p>
   </div>
 </footer>
