--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
       </a>
     </p>
     <p class="text-lg text-gray-700">
-      Phone: <span class="text-green-600">0558165619</span>
+      Phone: <a href="tel:0558165619" class="text-green-600 hover:underline">
+        0558165619
+      </a>
     </p>
   </div>
 </footer>
