--- a/templates/index.html
+++ b/templates/index.html
@@ -50,14 +50,14 @@
  <footer class="bg-white w-full py-8 px-6 text-center mt-20">
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
   <div class="space-y-2">
-    <p class="text-lg">
-      <a href="mailto:ghiras.saudi@gmail.com" class="text-green-600 hover:underline">
-        Email: ghiras.saudi@gmail.com
+    <p class="text-lg text-gray-700">
+      Email: <a href="mailto:ghiras.saudi@gmail.com" class="hover:underline text-green-600">
+        ghiras.saudi@gmail.com
       </a>
     </p>
-    <p class="text-lg">
-      <a href="tel:0558165619" class="text-green-600 hover:underline">
-        Phone: 0558165619
+    <p class="text-lg text-gray-700">
+      Phone: <a href="tel:0558165619" class="hover:underline">
+        0558165619
       </a>
     </p>
   </div>
