--- a/templates/index.html
+++ b/templates/index.html
@@ -51,17 +51,18 @@
   <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
   <div class="space-y-2">
     <p class="text-lg text-gray-700">
-      Email: <a href="mailto:ghiras.saudi@gmail.com" class="hover:underline text-green-600">
+      Email: <a href="mailto:ghiras.saudi@gmail.com" class="text-green-600 hover:underline">
         ghiras.saudi@gmail.com
       </a>
     </p>
     <p class="text-lg text-gray-700">
-      Phone: <a href="tel:0558165619" class="hover:underline">
+      Phone: <a href="tel:0558165619" class="text-gray-700 hover:underline">
         0558165619
       </a>
     </p>
   </div>
 </footer>
+
 
 
 </body>
