--- a/templates/plants.html
+++ b/templates/plants.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Green Glow | Suitable Plants</title>
+  <title>Ghiras | Suitable Plants</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="plants.css" />
@@ -156,7 +156,7 @@
 
   <!-- Footer -->
   <footer class="bg-white shadow-inner py-6 text-center text-sm text-gray-500 mt-20">
-    &copy; 2025 Green Glow | All rights reserved.
+    &copy; 2025 Ghiras | All rights reserved.
   </footer>
   <script src="{{ url_for('static', filename='plants.js') }}" defer></script>
 
