--- a/templates/condition.html
+++ b/templates/condition.html
@@ -4,7 +4,7 @@
 
 <style>
   body {
-    background-color: #f0fdf4; /* Light green background like index */
+    background-color: #f0fdf4; /* Light green like index */
   }
 </style>
 
@@ -63,7 +63,7 @@
         <div>
           <input type="file" name="hiddenfiles" id="hiddenfiles" multiple hidden>
 
-          <div class="text-gray-700 text-lg mb-6">
+          <div class="text-green-700 text-lg mb-6">
             <p>Note: Maximum total file size limit is 50 MB. Only PNG, JPG/JPEG files are allowed.</p>
             <p><a href="#crops-list" class="text-green-700 hover:underline font-semibold">List of currently supported crops</a></p>
           </div>
