--- a/static/main.css
+++ b/static/main.css
@@ -28,9 +28,9 @@ a.nav-link:hover {
     background-color: white;
 }
 body {
-    color: white;
-    background-color: white;
-}
+    background-color: #f0fdf4; /* Light green like index */
+    color: #1f2937; /* Tailwind gray-800 or default text */
+  }  
 .custom-font {
     font-family: 'Signika', sans-serif;
 }
