--- a/templates/condition.html
+++ b/templates/condition.html
@@ -65,15 +65,16 @@
 
           <div class="text-green-700 text-lg mb-6">
             <p>Note: Maximum total file size limit is 50 MB. Only PNG, JPG/JPEG files are allowed.</p>
-            <p><a href="#crops-list" class="text-green-700 hover:underline font-semibold">List of currently supported crops</a></p>
+            <p><a href="#crops-list" class="text-[#4e260d] hover:underline font-semibold">
+				List of currently supported crops</a></p>
           </div>
         </div>
 
         <!-- Predict Now Button -->
         <div>
-          <button class="bg-green-700 hover:bg-green-800 text-white font-bold py-3 px-8 rounded-2xl transition" type="submit" id="submit" onclick="return submit_form();">
-            Predict Now
-          </button>
+			<button class="bg-green-700 hover:bg-green-800 text-white font-semibold py-2 px-6 rounded-xl transition text-base" type="submit" id="submit" onclick="return submit_form();">
+				Predict Now
+			</button>			  
         </div>
 
       </form>
