--- a/templates/condition.html
+++ b/templates/condition.html
@@ -65,8 +65,7 @@
 
           <div class="text-green-700 text-lg mb-6">
             <p>Note: Maximum total file size limit is 50 MB. Only PNG, JPG/JPEG files are allowed.</p>
-            <p><a href="#crops-list" class="text-[#4e260d] hover:underline font-semibold">
-				List of currently supported crops</a></p>
+            <p><a href="#crops-list" class="text-[#4e260d] hover:underline font-semibold">List of currently supported crops</a></p>
           </div>
         </div>
 
