--- a/templates/base.html
+++ b/templates/base.html
@@ -168,21 +168,11 @@
 
 </main>
 
-<footer class="bg-white w-full py-8 px-6 text-center mt-20">
-    <h3 class="text-2xl font-bold text-green-700 mb-4">Contact Us</h3>
-    <div class="space-y-2">
-      <p class="text-lg text-gray-700">
-        Email: <a href="mailto:ghiras.saudi@gmail.com" class="text-green-600 hover:underline">
-          ghiras.saudi@gmail.com
-        </a>
-      </p>
-      <p class="text-lg text-gray-700">
-        Phone: <a href="tel:0558165619" class="text-gray-700 hover:underline">
-          0558165619
-        </a>
-      </p>
+<footer class="nav-color text-center py-4 mt-5">
+    <div class="container">
+        <p class="mb-0">© 2025 Ghiras</p>
     </div>
-  </footer>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
